--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div>
     <%= form.label :owner_id, style: "display: block" %>
-    <%= form.text_field :owner_id %>
+    <%= form.number_field :owner_id %>
   </div>
 
   <div>
