Change pronoun field to select in characters/_form.html.erb

--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -88,7 +88,7 @@
 
   <div>
     <%= form.label :pronoun, style: "display: block" %>
-    <%= form.text_field :pronoun %>
+    <%= form.select :pronoun, Character.pronouns.values %>
   </div>
 
   <div>
