Add functionality to fill in the rest of a character's stats in character.rb

--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -92,8 +92,8 @@
   </div>
 
   <div>
-    <%= form.label :max_sanity, style: "display: block" %>
-    <%= form.text_field :max_sanity %>
+    <%= form.label :san, style: "display: block" %>
+    <%= form.text_field :san %>
   </div>
 
   <div>
@@ -105,6 +105,11 @@
   <div>
     <%= form.label :mp, style: "display: block" %>
     <%= form.number_field :mp %>
+  </div>
+
+  <div>
+    <%= form.label :build, style: "display: block" %>
+    <%= form.number_field :build %>
   </div>
 
   <div>
