--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -9,6 +9,11 @@
   <%= button_to "Destroy this character", @character, method: :delete %>
 </div>
 
-<div>
-  <%= @character.skill %>
-</div>
+<ul>
+  <% Skill.column_names.each do |skill_name| %>
+    <% if skill_name != "character_id" && skill_name != "created_at" && skill_name != "updated_at" && skill_name != "id" %>
+      <li><%= skill_name %>: <%= @character.skill[skill_name] %></li>
+    <% end %>
+  <% end %>
+</ul>
+
