--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -2,18 +2,20 @@
 
 <%= render @character %>
 
+
+
+<ul>
+  <% Skill.column_names.each do |skill_name| %>
+    <% if skill_name != "character_id" && skill_name != "created_at" && skill_name != "updated_at" && skill_name != "id" %>
+      <li><%= skill_name.split("_").join(" ") %>: <%= @character.skill[skill_name] %></li>
+    <% end %>
+  <% end %>
+</ul>
+
 <div>
   <%= link_to "Edit this character", edit_character_path(@character) %> |
   <%= link_to "Back to characters", characters_path %>
 
   <%= button_to "Destroy this character", @character, method: :delete %>
 </div>
-
-<ul>
-  <% Skill.column_names.each do |skill_name| %>
-    <% if skill_name != "character_id" && skill_name != "created_at" && skill_name != "updated_at" && skill_name != "id" %>
-      <li><%= skill_name %>: <%= @character.skill[skill_name] %></li>
-    <% end %>
-  <% end %>
-</ul>
 
