--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,7 @@
   <body>
     <% if current_user %>
       <%= link_to "My Characters", characters_path %>
+      <%= link_to "My Campaigns", campaigns_path %>
       <%= link_to "Edit Profile", edit_user_registration_path %>
       <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
     <% else %>
