Modify campaigns table and run migration

--- a/app/views/campaigns/_form.html.erb
+++ b/app/views/campaigns/_form.html.erb
@@ -12,13 +12,8 @@
   <% end %>
 
   <div>
-    <%= form.label :user_id, style: "display: block" %>
-    <%= form.number_field :user_id %>
-  </div>
-
-  <div>
-    <%= form.label :character_id, style: "display: block" %>
-    <%= form.number_field :character_id %>
+    <%= form.label :name, style: "display: block" %>
+    <%= form.text_field :name %>
   </div>
 
   <div>
