--- a/app/views/campaigns/_campaign.html.erb
+++ b/app/views/campaigns/_campaign.html.erb
@@ -1,8 +1,12 @@
 <div id="<%= dom_id campaign %>">
+  
+  <p>
+    <%= campaign.name %>
+  </p>
+
   <p>
     <strong>User:</strong>
     <%= campaign.user_id %>
   </p>
-
 
 </div>
