Get nested attributes working for characters_campaign in character.rb and cahracters_controller

--- a/app/views/characters/_form.html.erb
+++ b/app/views/characters/_form.html.erb
@@ -43,6 +43,13 @@
     
   </div>
 
+  <div>
+    <%= form.fields_for :characters_campaign do |cc| %>
+      <%= cc.label :characters_campaign_id %>
+      <%= cc.select :characters_campaign_id, Campaign.all.collect { |c| [c.name, c.id] }, include_blank: true %>
+    <% end %>
+  </div>
+
 
 
   <div>
