--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -1,14 +1,25 @@
 <p style="color: green"><%= notice %></p>
 
-<h1>Characters</h1>
+<h1>My Characters</h1>
 
-<div id="characters">
+
+<table border="1">
+  <tr>
+    <th>Name</th>
+    <th>Campaign</th>
+  </tr>
   <% @characters.each do |character| %>
-    <%= render character %>
-    <p>
-      <%= link_to "Show this character", character %>
-    </p>
+    <tr>
+      <td>
+        <%= link_to "#{character.first_name} #{character.last_name}", character_path(character) %>
+      </td>
+      <% if character.campaigns != [] %>
+        <td>
+          <%= link_to "#{character.campaigns.first.name}", campaign_path(character.campaigns.first) %>
+        </td>
+      <% end %>
+    </tr>
   <% end %>
-</div>
+</table>
 
 <%= link_to "New character", new_character_path %>
