Fix possible error in character.rb that would allow occupation_id to be 0

--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -8,9 +8,11 @@
     <th>Name</th>
   </tr>
   <% @campaign.characters.each do |character| %>
-    <td>
-      <%= link_to "#{character.first_name} #{character.last_name}", character_path(character) %>
-    </td>
+    <tr>
+      <td>
+        <%= link_to "#{character.first_name} #{character.last_name}", character_path(character) %>
+      </td>
+    </tr>
   <% end %>
 </table>
 
@@ -20,9 +22,14 @@
     <th>Name</th>
   </tr>
   <%  @other_characters.each do |character| %>
-    <td>
-      <%= link_to "#{character.first_name} #{character.last_name}", character_path(character) %>
-    </td>
+    <tr>
+      <td>
+        <%= link_to "#{character.first_name} #{character.last_name}", character_path(character) %>
+      </td>
+      <td>
+        <%= character.occupation %>
+      </td>
+    </tr>
   <% end %>
 </table>
 
