Display character's occupation in campaign show page

--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -12,6 +12,9 @@
       <td>
         <%= link_to "#{character.first_name} #{character.last_name}", character_path(character) %>
       </td>
+      <td>
+        <%= character.occupation %>
+      </td>
     </tr>
   <% end %>
 </table>
