--- a/app/views/characters/index.html.erb
+++ b/app/views/characters/index.html.erb
@@ -13,6 +13,9 @@
       <td>
         <%= link_to "#{character.first_name} #{character.last_name}", character_path(character) %>
       </td>
+      <td>
+        <%= character.occupation %>
+      </td>
       <% if character.campaigns != [] %>
         <td>
           <%= link_to "#{character.campaigns.first.name}", campaign_path(character.campaigns.first) %>
