--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,14 @@
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
 
+    <% ##0F0B1C 
+        ##791C4A
+        #5D1D43
+        #D42355
+        #FE3584
+    %>
+
+
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
 
@@ -18,15 +26,17 @@
   </head>
 
   <body>
-    <% if current_user %>
-      <%= link_to "My Characters", characters_path %>
-      <%= link_to "My Campaigns", campaigns_path %>
-      <%= link_to "Edit Profile", edit_user_registration_path %>
-      <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
-    <% else %>
-      <%= link_to "Sign In", new_user_session_path %>
-      <%= link_to "Sign Up", new_user_registration_path %>
-    <% end %>
-    <%= yield %>
+    <div class="container-fluid">
+      <% if current_user %>
+        <%= link_to "My Characters", characters_path %>
+        <%= link_to "My Campaigns", campaigns_path %>
+        <%= link_to "Edit Profile", edit_user_registration_path %>
+        <%= link_to "Sign Out", destroy_user_session_path, method: :delete %>
+      <% else %>
+        <%= link_to "Sign In", new_user_session_path %>
+        <%= link_to "Sign Up", new_user_registration_path %>
+      <% end %>
+      <%= yield %>
+    </div>
   </body>
 </html>
