--- a/app/views/campaigns/show.html.erb
+++ b/app/views/campaigns/show.html.erb
@@ -3,7 +3,7 @@
 <h1><%= @campaign.name %></h1>
 
 <h3>Characters In This Campaign</h3>
-<table class="table">
+<table class="table table-hover">
   <tr>
     <th>Name</th>
     <th>Occupation</th>
