--- a/app/views/characters/show.html.erb
+++ b/app/views/characters/show.html.erb
@@ -5,9 +5,12 @@
 
 
 <ul>
-  <% Skill.column_names.each do |skill_name| %>
-    <% if skill_name != "character_id" && skill_name != "created_at" && skill_name != "updated_at" && skill_name != "id" %>
-      <li><%= skill_name.split("_").join(" ") %>: <%= @character.skill[skill_name] %></li>
+  <% Skill.order(name: :asc).column_names.each do |skill_name| %>
+    <% if skill_name.split("_").last != "id" && skill_name != "created_at" && skill_name != "updated_at" && skill_name != "id" %>
+      <li><%= skill_name.split("_").join(" ") %>: <%= @character.skill[skill_name] %>%</li>
+    <% end %>
+    <% if skill_name == "language_specialization_id" && @character.skill[skill_name] != nil %>
+      <li><%= LanguageSpecialization.find(@character.skill[skill_name]).name %></li>
     <% end %>
   <% end %>
 </ul>
