--- a/app/views/characters/_character.html.erb
+++ b/app/views/characters/_character.html.erb
@@ -6,11 +6,17 @@
 
   <h2><%= character.occupation %></h2>
 
-  <strong>Age:</strong>
-  <%= character.age %>
+  <h3>
+    <strong>Age:</strong>
+    <%= character.age %>
+  </h3>
 
   <div class="container text-center">
-    
+    <div class="row">
+      <div class="col">
+        <h4>Attributes</h4>
+      </div>
+    </div>
     <div class="row">
       <div class="col">
         <p>
