Add underlines and change size of pronoun in characters/_character

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,5 +28,13 @@ body {
     opacity: 0.8;
 }
 
+.underlined {
+    text-decoration: underline;
+}
+
+.small-heading-font {
+    font-size: 15px;
+}
+
 
 
