--- a/app/views/characters/_character.html.erb
+++ b/app/views/characters/_character.html.erb
@@ -1,7 +1,7 @@
 <div id="<%= dom_id character %>">
 
   <h1>
-    <%= character.first_name %> <%= character.last_name %> (<%= character.read_attribute_before_type_cast('pronoun') %>)
+    <%= character.first_name %> <%= character.last_name %> <span class="small-heading-font">(<%= character.read_attribute_before_type_cast('pronoun') %>)</span>
   </h1>
 
   <h2><%= character.occupation %></h2>
@@ -11,10 +11,12 @@
     <%= character.age %>
   </h3>
 
+  <hr>
+
   <div class="container text-center">
     <div class="row">
       <div class="col">
-        <h4>Attributes</h4>
+        <h4><span class="underlined">Attributes<span></h4>
       </div>
     </div>
     <div class="row">
@@ -100,36 +102,41 @@
       </p>
     </div>
 
-    <% count = 1 %>
-<% new_row = true %>
-<div>
-  <div class="row">
-    <h4>Skills</h4>
-  </div>
-  <% @skill_names.each_with_index do |skill_name, i| %>
-    <% if new_row == true %>
-      <% new_row = false %>
-      <div class="row">
-        <div class="col col-md-2">
-          <p><%= skill_name.split("_").join(" ") %>: <%= @character.skill[skill_name] %>%</p>
-        </div>
-    <% elsif (i + 1) % 5 == 0 %>
-      <% new_row = true %>
-        <div class="col col-md-2">
-          <p><%= skill_name.split("_").join(" ") %>: <%= @character.skill[skill_name] %>%</p>
-        </div>
-      </div>
+   
 
-    <% else %>
-      <div class="col col-md-2">
-        <p><%= skill_name.split("_").join(" ") %>: <%= @character.skill[skill_name] %>%</p>
+    <hr>
+
+    <% new_row = true %>
+    <div class="row">
+      <div class="col">  
+        <h4><span class="underlined">Skills</span></h4>
       </div>
+    </div>
+    <% @skill_names.each_with_index do |skill_name, i| %>
+      <% if new_row == true %>
+        <% new_row = false %>
+        <div class="row">
+          <div class="col col-md-2">
+            <p><%= skill_name.split("_").join(" ") %>: <%= @character.skill[skill_name] %>%</p>
+          </div>
+      <% elsif (i + 1) % 5 == 0 %>
+        <% new_row = true %>
+          <div class="col col-md-2">
+            <p><%= skill_name.split("_").join(" ") %>: <%= @character.skill[skill_name] %>%</p>
+          </div>
+        </div>
+
+      <% else %>
+        <div class="col col-md-2">
+          <p><%= skill_name.split("_").join(" ") %>: <%= @character.skill[skill_name] %>%</p>
+        </div>
+      <% end %>
     <% end %>
-  <% end %>
   </div>
-</div>
+
   
   </div>
+
 
 
 </div>
