--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,6 +36,18 @@ body {
     font-size: 15px;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #D96055
+}
+
+table p {
+    color: white;
+}
 
 
 
