Display san in _character.html.erb

--- a/app/views/characters/_character.html.erb
+++ b/app/views/characters/_character.html.erb
@@ -93,6 +93,10 @@
         </p>
       </div>
       <div class="col">
+        <p>
+          <strong>San:</strong>
+          <%= character.san %>
+        </p>
       </div>
     </div>
     <div class="row">
